增加：为什么不行